[gd_scene load_steps=4 format=3 uid="uid://c45w4w3mdaqvq"]

[ext_resource type="Script" path="res://Assets/Scene/GUI/TerrainSelectionMenu/AbilityListUI/AbilityItemUI/AbilityItemUI.gd" id="1_k25r5"]
[ext_resource type="Texture2D" uid="uid://2oi8hh5bstwx" path="res://icon.svg" id="2_w42we"]
[ext_resource type="Texture2D" uid="uid://byhvuiawxq2fu" path="res://Assets/Icon/exclamation.png" id="3_0fry2"]

[node name="AbilityItemUI" type="MarginContainer"]
mouse_filter = 0
theme_override_constants/margin_left = 3
theme_override_constants/margin_top = 3
theme_override_constants/margin_right = 3
theme_override_constants/margin_bottom = 3
script = ExtResource("1_k25r5")

[node name="Button" type="Button" parent="."]
custom_minimum_size = Vector2(150, 60)
layout_mode = 2
text = "@str::ability"
icon = ExtResource("2_w42we")
clip_text = true
expand_icon = true

[node name="ControlWarningTip" type="Control" parent="."]
layout_mode = 2
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="ControlWarningTip"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 2
theme_override_constants/margin_bottom = 2

[node name="Panel" type="Panel" parent="ControlWarningTip/MarginContainer"]
layout_mode = 2
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="ControlWarningTip/MarginContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 3
theme_override_constants/margin_top = 3
theme_override_constants/margin_right = 3
theme_override_constants/margin_bottom = 3

[node name="HBoxContainer" type="HBoxContainer" parent="ControlWarningTip/MarginContainer/MarginContainer"]
layout_mode = 2
mouse_filter = 2

[node name="TextureRect" type="TextureRect" parent="ControlWarningTip/MarginContainer/MarginContainer/HBoxContainer"]
modulate = Color(1, 1, 0, 1)
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
mouse_filter = 2
texture = ExtResource("3_0fry2")
expand_mode = 1
stretch_mode = 5

[node name="LabelWarningTip" type="Label" parent="ControlWarningTip/MarginContainer/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(0, 16)
layout_mode = 2
size_flags_horizontal = 3
text = "@str::warning"
autowrap_mode = 3

[connection signal="mouse_entered" from="Button" to="." method="_on_button_mouse_entered"]
[connection signal="mouse_exited" from="Button" to="." method="_on_button_mouse_exited"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
